src/test/deca/syntax/invalid/created/miscellaneous/cast_missing_opar_2.deca
// Description :
//    cast manque de la deuxième parenthese (
//
// Resultats :
//		Syntaxe error

{
a = (a)(a;
}